--- a/style.css
+++ b/style.css
@@ -1,5 +1,33 @@
 .rightalign {
 
     text-align: right;
+}
 
+.typebox{
+    height: 30px;
+    font-size: 18px;
+    border: 1px solid #ccc;
+    display: block;
+    margin-top: 5px;
+    padding-left: 5px;
+}
+
+label{
+    width: 150px;
+    float: left;
+    padding-top: 15px;
+}
+
+form{
+    width: 400px;
+
+}
+
+.overflowhidden{
+    overflow: hidden;
+}
+
+.radiogroup{
+    margin-top: 10px;
+    float: left;
 }
